# NotifyMeBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  notifyme.sqlite3  pyproject.toml
config/: settings.docker.example.yaml  settings.example.yaml
src/notifyme_bot/: __init__.py  __main__.py  bot.py  config.py  db.py  i18n.py  llm_parser.py  main.py  models.py  scheduler_service.py
src/notifyme_bot/llm/: __init__.py  errors.py  factory.py  gemini.py  json_utils.py  openai_compatible.py  protocol.py
src/notifyme_bot/locales/: messages.yaml
tests/: gemini_payloads.py  http_fakes.py  test_bot_handlers.py  test_bot_wiring.py  test_config.py  test_db.py  test_db_migrations.py  test_i18n.py  test_llm_factory.py  test_llm_parser.py  test_llm_parser_coverage.py  test_main.py  test_openai_compatible_provider.py  test_scheduler.py  test_scheduler_edges.py
